# MLRIT_HACK

./: .env  .gitignore  README.md  index.html  info.md  pyproject.toml  start.ps1  start.sh
.agent-instructions/: .theme.md
backend/: .gitignore  __init__.py  basic_organizer.py  cluster_namer.py  clustering.py  config.py  database.py  embeddings.py  file_organizer.py  file_reader.py  main.py  rag.py  vector_store.py  watcher.py  websocket.py
backend/routers/: __init__.py  chat.py  clusters.py  files.py  search.py
backend/~/Users/pavan/sefs-root2/.sefs-data/: sefs.db
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  theme.ts  types.ts
frontend/src/components/: ActivityBar.tsx  ChatPanel.tsx  CinematicIntro.tsx  EventLog.tsx  FileDetailsPanel.tsx  FileList.tsx  ForceGraph.tsx  GapAnalysisPanel.tsx  HandTracker.tsx  SearchBar.tsx  SearchModal.tsx  SettingsDrawer.tsx  Sidebar.tsx  SpatialView.tsx  TimelineView.tsx  TopNav.tsx  UmapView.tsx
frontend/src/hooks/: useApi.ts  useHandTracking.ts  useWebSocket.ts
sefs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
